--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.1.0",
     "jest-expo": "~19.0.0",
+    "react-native-scripts": "1.1.0",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,8 +19,19 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "apisauce": "^0.14.1",
     "expo": "^19.0.0",
+    "format-json": "^1.0.3",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
+    "querystringify": "^1.0.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.1"
+    "react-native": "^0.46.1",
+    "react-navigation": "^1.0.0-beta.11",
+    "redux": "^3.7.2",
+    "redux-persist": "^4.8.3",
+    "redux-saga": "^0.15.6",
+    "reduxsauce": "^0.6.0",
+    "seamless-immutable": "^7.1.2"
   }
 }
