--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "querystringify": "^1.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
+    "react-native-elements": "^0.16.0",
     "react-navigation": "^1.0.0-beta.11",
     "redux": "^3.7.2",
     "redux-persist": "^4.8.3",
