--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "expo": {
-    "sdkVersion": "19.0.0"
+    "name": "LocationApp",
+    "slug": "location-app",
+    "sdkVersion": "19.0.0",
+    "privacy": "unlisted"
   }
 }
